--- a/Source/Mosa.Packages/Mosa.Platform.x86.nuspec
+++ b/Source/Mosa.Packages/Mosa.Platform.x86.nuspec
@@ -20,6 +20,7 @@
 	</metadata>
 	<files>
 		<file src="..\Art\Mosa Icon.png" target="images" />
+		<file src="..\..\bin\Mosa.Kernel.BareMetal.Intel.dll" target="lib\net7.0" />
 		<file src="..\..\bin\Mosa.Kernel.BareMetal.x86.dll" target="lib\net7.0" />
 		<file src="..\..\bin\Mosa.Runtime.x86.dll" target="lib\net7.0" />
 		<file src="..\..\bin\Mosa.Plug.Korlib.x86.dll" target="lib\net7.0" />
