--- a/Source/Mosa.Kernel.BareMetal.x64/Mosa.Kernel.BareMetal.x64.csproj
+++ b/Source/Mosa.Kernel.BareMetal.x64/Mosa.Kernel.BareMetal.x64.csproj
@@ -3,6 +3,7 @@
 	<Import Project="../Mosa.BareMetal.targets" />
 
 	<ItemGroup>
+		<ProjectReference Include="..\Mosa.Kernel.BareMetal.Intel\Mosa.Kernel.BareMetal.Intel.csproj" />
 		<ProjectReference Include="..\Mosa.Kernel.BareMetal\Mosa.Kernel.BareMetal.csproj" />
 		<ProjectReference Include="..\Mosa.Runtime.x64\Mosa.Runtime.x64.csproj" />
 	</ItemGroup>
