--- a/Source/Mosa.BareMetal.HelloWorld.ARM32/Mosa.BareMetal.HelloWorld.ARM32.csproj
+++ b/Source/Mosa.BareMetal.HelloWorld.ARM32/Mosa.BareMetal.HelloWorld.ARM32.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
+		<StartupObject>Mosa.BareMetal.HelloWorld.ARM32.Boot</StartupObject>
 	</PropertyGroup>
 
 	<Import Project="../Mosa.BareMetal.targets" />
