--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -74,7 +74,7 @@ jobs:
 
   windows-build-packaging:
     name: Windows Build Packaging
-    needs: [windows-build, linux-build, macos-build, generate-docs, windows-unit-testing, linux-unit-testing, macos-unit-testing, windows-demo-testing, linux-demo-testing, macos-demo-testing]
+    needs: [windows-build, linux-build, macos-build, windows-unit-testing, linux-unit-testing, macos-unit-testing, windows-demo-testing, linux-demo-testing, macos-demo-testing]
     runs-on: windows-latest
     timeout-minutes: 15
     if: github.event_name == 'push' && github.repository == 'mosa/MOSA-Project' && github.ref == 'refs/heads/master'
