--- a/Source/Mosa.Packages/Mosa.Platform.x86.nuspec
+++ b/Source/Mosa.Packages/Mosa.Platform.x86.nuspec
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <package>
 	<metadata>
 		<id>Mosa.Platform.x86</id>
@@ -20,9 +20,9 @@
 	</metadata>
 	<files>
 		<file src="..\Art\Mosa Icon.png" target="images" />
-		<file src="..\..\bin\Mosa.Kernel.BareMetal.Intel.dll" target="lib\net7.0" />
-		<file src="..\..\bin\Mosa.Kernel.BareMetal.x86.dll" target="lib\net7.0" />
-		<file src="..\..\bin\Mosa.Runtime.x86.dll" target="lib\net7.0" />
-		<file src="..\..\bin\Mosa.Plug.Korlib.x86.dll" target="lib\net7.0" />
+		<file src="..\..\bin\Mosa.Kernel.BareMetal.Intel.dll" target="lib\net8.0" />
+		<file src="..\..\bin\Mosa.Kernel.BareMetal.x86.dll" target="lib\net8.0" />
+		<file src="..\..\bin\Mosa.Runtime.x86.dll" target="lib\net8.0" />
+		<file src="..\..\bin\Mosa.Plug.Korlib.x86.dll" target="lib\net8.0" />
 	</files>
 </package>
