--- a/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
+++ b/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <package>
 	<metadata>
 		<id>Mosa.Tools.Package</id>
@@ -20,33 +20,33 @@
 	</metadata>
 	<files>
 		<file src="..\Art\Mosa Icon.png" target="images" />
-		<file src="..\..\bin\runtimes\**\*.*" target="contentFiles/any/net7.0/Tools/runtimes" />
-		<file src="..\..\bin\Avalonia*.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Mosa.Compiler.Common.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Mosa.Compiler.Framework.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Mosa.Compiler.MosaTypeSystem.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Mosa.Compiler.MosaTypeSystem.CLR.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Mosa.Compiler.ARM32.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Mosa.Compiler.x86.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Mosa.Compiler.x64.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Mosa.Tool.Explorer.*" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Mosa.Tool.Debugger.*" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Mosa.Tool.Launcher.*" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Mosa.Tool.Compiler.*" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Mosa.Utility.BootImage.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Mosa.Utility.Configuration.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Mosa.Utility.FileSystem.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Mosa.Utility.Launcher.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Mosa.Utility.RSP.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Mosa.Utility.Disassembler.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\dnlib.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Reko.Arch.Arm.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Reko.Arch.X86.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Reko.Core.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\WinFormsUI.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\WeifenLuo.WinFormsUI.Docking.ThemeVS2015.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\SkiaSharp.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\HarfBuzzSharp.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Tmds.DBus.Protocol.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\runtimes\**\*.*" target="contentFiles/any/net8.0/Tools/runtimes" />
+		<file src="..\..\bin\Avalonia*.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Mosa.Compiler.Common.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Mosa.Compiler.Framework.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Mosa.Compiler.MosaTypeSystem.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Mosa.Compiler.MosaTypeSystem.CLR.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Mosa.Compiler.ARM32.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Mosa.Compiler.x86.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Mosa.Compiler.x64.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Mosa.Tool.Explorer.*" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Mosa.Tool.Debugger.*" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Mosa.Tool.Launcher.*" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Mosa.Tool.Compiler.*" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Mosa.Utility.BootImage.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Mosa.Utility.Configuration.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Mosa.Utility.FileSystem.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Mosa.Utility.Launcher.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Mosa.Utility.RSP.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Mosa.Utility.Disassembler.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\dnlib.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Reko.Arch.Arm.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Reko.Arch.X86.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Reko.Core.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\WinFormsUI.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\WeifenLuo.WinFormsUI.Docking.ThemeVS2015.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\SkiaSharp.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\HarfBuzzSharp.dll" target="contentFiles/any/net8.0/Tools" />
+		<file src="..\..\bin\Tmds.DBus.Protocol.dll" target="contentFiles/any/net8.0/Tools" />
 	</files>
 </package>
