--- a/Source/Mosa.Utility.UnitTests/Mosa.Utility.UnitTests.csproj
+++ b/Source/Mosa.Utility.UnitTests/Mosa.Utility.UnitTests.csproj
@@ -50,6 +50,7 @@
 		<Compile Include="..\Mosa.UnitTests\Optimization\LoopTests.cs" Link="Tests\Optimization\LoopTests.cs" />
 
 		<Compile Include="..\Mosa.UnitTests\Optimization\LoopUnrollingTests.cs" Link="Tests\Optimization\LoopUnrollingTests.cs" />
+		<Compile Include="..\Mosa.UnitTests\Optimization\LoopStrengthReduction.cs" Link="Tests\Optimization\LoopStrengthReduction.cs" />
 
 		<Compile Include="..\Mosa.UnitTests\Other\CompilerBugTests.cs" Link="Tests\Other\CompilerBugTests.cs" />
 		<Compile Include="..\Mosa.UnitTests\Other\SpecificTests.cs" Link="Tests\Other\SpecificTests.cs" />
