--- a/Source/Mosa.Templates/templates/Mosa.Starter.x86/Properties/launchSettings.json
+++ b/Source/Mosa.Templates/templates/Mosa.Starter.x86/Properties/launchSettings.json
@@ -4,7 +4,7 @@
 			"commandName": "Executable",
 			"executablePath": "dotnet",
 			"commandLineArgs": "Tools/Mosa.Tool.Launcher.dll Mosa.Starter.x86.dll",
-			"workingDirectory": "bin"
+			"workingDirectory": "$(ProjectDir)bin"
 		}
 	}
 }
