--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -188,13 +188,15 @@ jobs:
         with:
           name: windows-build-artifact
           path: bin
+      - name: Make Artifact Folder
+        run: mkdir artifact
       - name: Unit Test
-        run: bin\Mosa.Utility.UnitTests.exe -check -o${{ matrix.optimization }} -counters windows-counters-${{ matrix.optimization }}.txt
+        run: bin\Mosa.Utility.UnitTests.exe -check -o${{ matrix.optimization }} -counters artifact\windows-counters-unittests-o${{ matrix.optimization }}.txt
       - name: Store Counter Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: windows-counters-${{ matrix.optimization }}.txt
-          path: windows-counters-${{ matrix.optimization }}.txt
+          name: windows-counters-unittests-o${{ matrix.optimization }}
+          path: artifact
 
   linux-unit-testing:
     strategy:
@@ -223,13 +225,15 @@ jobs:
         run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
       - name: Install Qemu and Dependencies
         run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
-      - name: Unit Test  
-        run: dotnet bin/Mosa.Utility.UnitTests.dll -check -o${{ matrix.optimization }} -counters linux-counters-${{ matrix.optimization }}.txt
+      - name: Make Artifact Folder
+        run: mkdir artifact
+      - name: Perform Unit Testing
+        run: dotnet bin/Mosa.Utility.UnitTests.dll -check -o${{ matrix.optimization }} -counters artifact/linux-counters-unittests-o${{ matrix.optimization }}.txt
       - name: Store Counter Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: linux-counters-${{ matrix.optimization }}.txt
-          path: linux-counters-${{ matrix.optimization }}.txt
+          name: linux-counters-unittests-o${{ matrix.optimization }}
+          path: artifact
           
   macos-unit-testing:
     strategy:
@@ -256,13 +260,15 @@ jobs:
           path: bin
       - name: Install Qemu
         run: brew install qemu
+      - name: Make Artifact Folder
+        run: mkdir artifact
       - name: Unit Test 
-        run: dotnet bin/Mosa.Utility.UnitTests.dll -check -o${{ matrix.optimization }} -macos linux-counters-${{ matrix.optimization }}.txt
+        run: dotnet bin/Mosa.Utility.UnitTests.dll -check -o${{ matrix.optimization }} -macos artifact/macos-counters-unittest-o${{ matrix.optimization }}.txt
       - name: Store Counter Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: macos-counters-${{ matrix.optimization }}.txt
-          path: macos-counters-${{ matrix.optimization }}.txt
+          name: macos-unittest-counters-o${{ matrix.optimization }}
+          path: artifact
 
   windows-demo-testing:
     strategy:
